Nutch Change Log
  
Nutch Current Development 1.11-SNAPSHOT

* NUTCH-2021 Use protocol-selenium to Capture Screenshots of the Page as it is Fetched (lewismc)

* NUTCH-2058 Indexer plugin that allows RegEx replacements on the NutchDocument 
  field values (Peter Ciuffetti via mattmann)

* NUTCH-2059 protocol-httpclient, protocol-http unit test errors on Jenkins (Peter Ciuffetti via mattmann)

* NUTCH-1980 Jexl expressions for CrawlDbReader (markus)

* NUTCH-1692 SegmentReader was broken in distributed mode (markus, tejasp)

* NUTCH-1684 ParseMeta to be added before fetch schedulers are run (markus)

* NUTCH-2038 fix for NUTCH-2038: Naive Bayes classifier based html Parse filter (for filtering outlinks) 
  (Asitang Mishra, snagel via mattmann)

* NUTCH-2041 indexer fails if linkdb is missing (snagel)

* NUTCH-2016 Remove unused class OldFetcher (snagel)

* NUTCH-2000 Link inversion fails with .locked already exists (jnioche, snagel)

* NUTCH-2036 Adding some continuous crawl goodies to the crawl script (jorge, snagel)

* NUTCH-2039 Relevance based scoring filter (Sujen Shah, lewismc via mattmann)

* NUTCH-2037 Job endpoint to support Indexing from the REST API (Sujen Shah via mattmann)

* NUTCH-2017 Remove debug log from MimeUtil (snagel)

* NUTCH-2027 seed list REST endpoint for Nutch 1.10 (Asitang Mishra via mattmann)

* NUTCH-2031 Create Admin End point for Nutch 1.x REST service (Sujen Shah via mattmann)

* NUTCH-2015 Make FetchNodeDb optional (off by default) if NutchServer is not used (Sujen Shah via mattmann)

* NUTCH-208 http: proxy exception list: (Matthias Günter, siren, markus, lewismc)

* NUTCH-2007 add test libs to classpath of bin/nutch junit (snagel)

* NUTCH-1995 Add support for wildcard to http.robot.rules.whitelist (totaro)

* NUTCH-2013 Fetcher: missing logs "fetching ..." on stdout (snagel)

* NUTCH-2014 Fetcher hang-up on completion (snagel)

* NUTCH-2011 Endpoint to support realtime JSON output from the fetcher (Sujen Shah via mattmann)
